--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,11 @@ Thumbs.db
 # Excel files (optional - remove if you want to commit them)
 # *.xlsx
 
+# Uploaded files
+uploads/
+*.xlsx
+*.xls
+
 # Deployment
 .vercel/
 .railway/
