--- a/.gitignore
+++ b/.gitignore
@@ -28,13 +28,13 @@ Thumbs.db
 .env
 .env.local
 
-# Excel files (optional - remove if you want to commit them)
-# *.xlsx
-
-# Uploaded files
-uploads/
+# Excel files - allow the main data file, ignore others
 *.xlsx
 *.xls
+!Data Jul-Nov 2025.xlsx
+
+# Uploaded files (user uploads go here)
+uploads/
 
 # Deployment
 .vercel/
